# checkpoint-explorer

./: .justfile  AGENTS.md  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: cd.yaml  ci.yaml  lint.yml
backend/: .env.example  Cargo.toml  docker-compose.yml
backend/database/src/: connection.rs
backend/database/src/services/: block_service.rs  checkpoint_service.rs  utils.rs
backend/fullnode-client/: Cargo.toml  fetcher.rs
backend/migration/: Cargo.toml
backend/migration/src/: m20220101_000001_create_checkpoint_table.rs  m20241226_100451_create_blocks_table.rs
backend/model/: Cargo.toml
backend/model/src/: block.rs  checkpoint.rs  lib.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/components/: SearchSection.tsx
frontend/src/components/CheckpointDetails/: index.tsx
frontend/src/components/Paginator/: index.tsx
frontend/src/components/Paginator/Pagination/: index.tsx
frontend/src/components/Table/: index.tsx
frontend/src/components/Table/TableBody/: index.tsx
frontend/src/hooks/: useTable.ts
frontend/src/types/: index.tsx
frontend/src/utils/: lib.tsx
functional-tests/: .gitignore  entry.py  pyproject.toml  run_tests.sh
functional-tests/envs/: __init__.py  testenv.py
functional-tests/envs/services/: __init__.py  backend.py  database.py  mock_fullnode.py
functional-tests/tests/: checkpoint_detail.py  checkpoints.py  parallel_block_fetch.py  search.py
functional-tests/utils/: __init__.py  api_client.py  wait.py
