[workspace]
resolver = "2"
members = [
    "bin/checkpoint-explorer",
    "model",
    "migration",
    "database",
    "fullnode-client",
]

[workspace.dependencies]
sea-orm = { version = "1.1.0", features = ["sqlx-mysql"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
model = { path = "model" }
migration = { path = "migration" }
database = { path = "database" }
fullnode-client = { path = "fullnode-client" }
anyhow = "1.0"
axum = { version = "0.6", features = ["headers"] }
tower-http = { version = "0.4", features = ["full"] }
tokio = { version = "1.44", features = ["full"] }
rocksdb = "0.21"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }           # HTTP client
num-bigint = "0.4"
rand = "0.8"
lru = "0.10"
hex = "0.4"
sea-orm-migration = "0.9"
config = "0.13"
dotenvy = "0.15.7"
