[package]
name = "fullnode-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "lib.rs"

[dependencies]
model.workspace = true
migration.workspace = true
tracing.workspace = true
sea-orm.workspace = true
serde.workspace = true
anyhow.workspace = true
jsonrpsee.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt"] }
