[package]
name = "model"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
sea-orm = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
strata-identifiers = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
